--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -30,3 +30,19 @@
 .el-loading-mask {
   z-index: 2!important;
 }
+
+.el-message-box__wrapper {
+  .el-message-box {
+      width: 20rem;
+    }
+}
+
+.el-message {
+  top: 0.6rem!important;
+  min-width: 20rem!important;
+  padding: 0.6rem!important;
+}
+
+.not-allowed {
+  cursor: not-allowed;
+}
